--- a/ChiSaTo.csproj
+++ b/ChiSaTo.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>hutao.ico</ApplicationIcon>
+    <TargetFrameworks>net8.0-windows;</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
