--- a/App.config
+++ b/App.config
@@ -10,6 +10,12 @@
             <setting name="BlogCateLog" serializeAs="String">
                 <value>D:\\博客\\YuriBlog</value>
             </setting>
+            <setting name="Blog_Url" serializeAs="String">
+                <value>http://www.yayi.site</value>
+            </setting>
+            <setting name="Blog_Repo" serializeAs="String">
+                <value>https://github.com/TangxinGH/Blog</value>
+            </setting>
         </ChiSaTo.Settings1>
     </userSettings>
 </configuration>
